Upgrade to scala 2.13.1